examples/test/testpolicy12289.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12289
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key12: value5
      key26: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value41
      podSelector:
        matchLabels:
          key23: value14
          key3: value39
